assets/css/coursesystem.css
/* ... */
.userinfo>.selected {
	max-height: 200px !important;
}

.selected input {
	display: block;
}

.userinfo .selected div[class|="col"]:nth-child(2) span {
	display: none;
}

.lightcolor {
	color: #777;
}

.darkcolor {
	color: black;
}

.uploadPhotoBoxWrapper {
	width: 100%;
	max-width: 250px;
	margin: auto;
	position: relative;
	cursor: pointer;
}

.photoHover {
	opacity: 1 !important;
}

.uploadPhotoBox {
	color: white;
	position: absolute;
	width: 100%;
	background-color: rgba(0, 0, 0, 0.44);
	bottom: 0;
	transition: opacity 0.2s ease;
	opacity: 0.5;
}

.profileImage {
	width: 100%;
	max-width: 250px;
	border: 1px solid black;
}

.rssFeedBox {
	margin-bottom: 20px;
}

.rssFeedBox .alignleft {
	float: left;
	margin: 5px 10px 0 0;
}

.rssFeedBox .wp-caption {
	border: 1px solid #ddd;
	text-align: center;
	background-color: #f3f3f3;
	padding-top: 4px;
	margin: 10px auto 10px auto;
	max-width: 95.5%;
	-moz-border-radius: 3px;
	-khtml-border-radius: 3px;
	-webkit-border-radius: 3px;
	border-radius: 3px;
}

.rssFeedBox .wp-caption p.wp-caption-text {
	font-size: 11px;
	line-height: 17px;
	padding: 0 4px 5px;
	margin: 0;
}

.rss-headline-wrapper {
	width: 100%;
	position: absolute;
	background-color: rgb(69, 150, 27);
	color: white;
	padding: 20px 40px;
	font-size: 28px;
	bottom: 0px;
}

.fullWHLink {
	position: absolute;
	height: 100%;
	width: 100%;
	top: 0px;
	left: 0px;
}

.footer-fix {
	min-height: 100vh;
	margin-bottom: 50px;
}

.footerFix {
	min-height: 100vh;
	margin-bottom: 50px;
}

.app-big-video .owl-buttons div {
	background-color: rgba(91, 188, 5, 0.93) !important;
	font-size: 19px !important;
}

.slidebar-toggle {
	position: relative;
	padding: 5px 8px;
	margin-top: 7px;
	margin-right: 15px;
	margin-bottom: 0px;
	background-color: transparent;
	background-image: none;
	border: 1px solid transparent;
	border-radius: 4px;
	border-color: #ddd;
	float: left;
	color: white;
}

.sidebar-show {
	margin: 0px !important;
}

.banner-logo {
	float: left;
	margin-right: 19px;
	padding-top: 12px;
	padding-left: 15px;
}

.unstyled-list {
	list-style: none;
	padding-left: 0px;
}

.book-content-list li {
	padding-top: 14px;
}

.book-content-list li a {
	font-size: 16px;
}

.page-btm-spacer {
	margin-bottom: 25px;
}

.carousel-step-end-overlay {
	width: 100%;
	height: 100%;
	background-color: rgb(48, 139, 157);
	padding: 0px 20px;
	color: white;
	display: none;
	position: absolute;
	top: 0px;
}

.owl-custom-nav-btn:hover {
	background-color: rgb(144, 180, 41);
}

.owl-custom-nav-btn {
	background-color: rgba(164, 202, 57, 1);
	border-radius: 22px;
	color: white;
	font-size: 18px;
	padding: 6px 9px;
	margin: 0px 20px;
	display: inline-block;
	cursor: pointer;
	transition: 0.05s;
}

.app-big-video .owl-pagination {
	padding: 10px 0px !important;
	background-color: white;
}

.app-big-video .owl-theme .owl-controls .owl-page span.owl-numbers {
	background-color: white;
}

.carousel-step-end-overlay button {
	background-color: #A4C639;
	font-size: 21px;
	width: 300px;
	display: block;
	margin: 100px auto;
	border-radius: 16px;
	transition: 0.05s;
	padding: 10px 0px;
}

.carousel-step-end-overlay button:hover {
	background-color: rgb(144, 180, 41);
	color: white;
}

.modules-nav-menu {
	margin-top: 60px;
}

/* class for dark blue toolbar */
.dark-blue-title {
	width: 100%;
	background-color: #455A64;
	color: white;
	padding-bottom: 10px;
}

.dark-blue-title a {
	color: white;
}

.dark-blue-title a:hover {
	color: #369D99;
}
.card-title{
	background-color: #455A64;
	color: white;
}

/* General purpose container for content */
.card {
	background-color: white;
	color: #333;
	border: 1px solid #e2e2e2;
	padding: 10px 20px;
	margin: 10px 0px;
}

.card--teacher {
	background-color: white;
	color: #333;
	border: 1px solid #e2e2e2;
	text-align: center;
	height: 500px;
	padding-top: 60px;
	width: 333px;
	margin: 10px auto;
}

.card--teacher img {
	margin: auto;
	border-radius: 100px;
}

.landing-teachers-section {
	height: 500px;
	background-image: url("/assets/img/propoganda/brian_teaching2.jpg");
	background-size: 100% auto;
	background-position-y: 50%;
	box-shadow: 0px 0px 23px black;
	position: relative;
}

.landing-teachers-section .overlay {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.5);
	text-align: center;
}

.teachers-graphic-box {
	height: 500px;
	width: 100%;
	border: 1px solid rgba(0, 0, 0, 0.29);
}

.landing-courses-section {
	background-color: #6AB344;
	color: white;
	text-align: center;
	padding: 40px 0px;
}

/* Card used to link to items in a course */
.course-card {
	text-align: center;
	color: rgba(41, 37, 63, 0.77);
	padding: 64px 0px;
	height: 244px;
	border-radius: 6px;
	max-width: 370px;
	margin: 0px auto 35px;
	background-size: 100% 100%;
	transition: all 0.3s;
	position: relative;
}

.course-card:hover {
	margin-top: -20px;
}

.course-card:hover .course-card-description {
	opacity: 1;
}

.course-card>* {
	position: relative;
	left: 13px;
}

.course-card a {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
}

.course-card .glyphicon, .course-card i {
	font-size: 80px;
	border-radius: 100px;
	margin-bottom: -10px;
}

.course-card-description {
	position: relative;
	top: 65px;
	color: white;
	font-size: 20px;
	opacity: 0;
	transition: opacity 0.3s;
}

.landing-video-text {
	text-align: center;
}

/* A big call to action button, basicly only used on landing page. */
.landing-big-btn {
	display: block;
	background-color: #E58D1F;
	color: white;
	padding: 13px 32px;
	border: 1px solid rgba(0, 0, 0, 0.2);
	font-size: 18px;
	width: 256px;
	font-weight: 500;
	text-align: center;
	line-height: 24px;
	border-radius: 7px;
	cursor: pointer;
	margin: auto;
	-webkit-transition: .1s background-color ease-in-out;
}

.center-img {
	display: block;
	margin: auto;
}

hr {
	margin-top: 20px;
	margin-bottom: 20px;
	border: 0;
	border-top: 1px solid #329796;
}
/* ... */

